[package]
name = "aurora-controller-factory"
authors = ["Aurora Labs <hello@aurora.dev>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/aurora-is-near/aurora-factory"
repository = "https://github.com/aurora-is-near/aurora-factory"
license = "CC0-1.0"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

[dependencies]
anyhow = "1"
hex = "0.4"
near-sdk = "5.2"
near-contract-standards = "5.2"
near-gas = "0.2"
near-plugins = { git = "https://github.com/aleksuss/near-plugins.git", rev = "a1393df" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.2", features = ["unit-testing"] }
near-workspaces = "0.11"
tokio = { version = "1", features = ["macros"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"
