[workspace.package]
authors = ["Aurora Labs <hello@aurora.dev>"]
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/aurora-is-near/aurora-controller-factory"
repository = "https://github.com/aurora-is-near/aurora-controller-factory"
license = "CC0-1.0"
readme = "README.md"
publish = false

[workspace]
resolver = "2"
members = ["contract", "converter"]

[workspace.lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

[workspace.dependencies]
anyhow = "1"
hex = "0.4"
near-plugins = { git = "https://github.com/Near-One/near-plugins.git", tag = "v0.4.1" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
near-gas = "0.3"
near-sdk = "5.6"
near-workspaces = "0.15"
tokio = { version = "1", features = ["macros"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"
