[package]
authors.workspace = true
name = "aurora-borsh-converter"
description = "Tool to convert bytes to borsh representation"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
near-sdk.workspace = true
